--- a/bwi-client_server/Makefile
+++ b/bwi-client_server/Makefile
@@ -4,7 +4,8 @@ include ../Makefile
 test_cases = 
 test_cases_sudo =
 executables = main-1 main-2 main-3 main-4 main-5 main-6 main-7 main-8 main-9 \
-main-10 main-11 server client cpu_hog cpu_hog_cbs hrt_cbs
+main-10 main-11 main-12 main-13 \
+server client cpu_hog server_hog cpu_hog_cbs hrt_cbs
 
 cond_for_pthread +=
 cond_for_rt +=
