[Experimentation Component] * bwi-client_server/subexperiment_21.cfg: Add forgotten CPU_HOG. * bwi-client_server/subexperiment_22.cfg: Likewise.

--- a/bwi-client_server/subexperiment_22.cfg
+++ b/bwi-client_server/subexperiment_22.cfg
@@ -1,3 +1,4 @@
 SERVER -d 9 -p 7777                                   -q 10 -t 30
 CLIENT -1 5 -2 9 -3 5 -p 7777 -s subexperiment_22.bin -q 11 -t 30 -b
 CPU_HOG_CBS -e 10 -b 0 -z                             -q  6 -t 30
+CPU_HOG
